@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="repository.luigitech" version="1.0.0" name="Luigitech Add-on repository" provider-name="Luigitech">
+<addon id="repository.luigitech" version="1.0.1" name="Luigitech Add-on repository" provider-name="Luigitech">
 	<extension point="xbmc.addon.repository">
 		<info>https://github.com/lperezperez/repository.luigitech/raw/master/addons.xml.gz</info>
-		<checksum>https://github.com/lperezperez/repository.luigitech/raw/master/addons.xml.md5.gz</checksum>
+		<checksum>https://github.com/lperezperez/repository.luigitech/raw/master/addons.xml.gz.md5</checksum>
 		<datadir zip="true">https://github.com/lperezperez/repository.luigitech/raw/master</datadir>
         <hashes>true</hashes>
 	</extension>
@@ -14,6 +14,8 @@
 		<description lang="en">Kodi repository for modded, unofficial or nightly add-ons.</description>
 		<description lang="es">Repositorio de Kodi de addons modificadas, no oficiales o versiones nightly.</description>
         <news>
+            1.0.1
+            - Fixed checksum URL.
             1.0.0
             - Initial Release.
         </news>
