@@ -1,2 +1,4 @@
 [B]1.0.1[/B]
+- Fixed checksum URL.
+[B]1.0.0[/B]
 - Initial Release.
